poke/testsuite/poke.pkl/ne-structs-diag-1.pk
/* { dg-do compile } */

deftype Foo = struct {};
deftype Bar = struct {};

defvar i = Foo {} != Bar {}; /* { dg-error "invalid.*\n.*expected Foo" } */
